--- a/demo/GAN.ipynb
+++ b/demo/GAN.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -4490,7 +4493,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
